--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "create-folders": "node scripts/initFolders.js",
-    "encodeImages": "node scripts/encodeImages.mjs"
+    "encodeImages": "node scripts/encodeImages.mjs",
+    "updateFrontEndData": "node scripts/updateFrontEndData.mjs"
   },
   "keywords": [
     "sample",
@@ -20,7 +21,8 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
