--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serveImages": "npx http-server ../concepts -p 4000"
   },
   "dependencies": {
     "vue": "^3.3.4",
