--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exole-mtl-cartographie",
+  "name": "ecole-mtl-cartographie",
   "version": "1.0.0",
   "description": "Un projet du collectif école de MTL",
   "url": "TBD",
