--- a/package.json
+++ b/package.json
@@ -39,7 +39,16 @@
     "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
     "sharp": "^0.32.5",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "http-proxy-middleware": "^2.0.6",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
