--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "dev": "nodemon ./bin/www"
 
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
