--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
-
   },
   "engines": {
     "node": "16.x"
@@ -14,9 +13,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "gray-matter": "^4.0.3",
     "http-errors": "~1.6.3",
     "http-proxy-middleware": "^2.0.6",
     "jade": "~1.11.0",
+    "markdown-it": "^13.0.1",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
   }
