--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,18 @@
     "build": "vite build",
     "preview": "vite preview",
     "serveImages": "npx http-server ../concepts -p 4000",
-    "dev2":  "nodemon --watch src --exec \"vite build\""
+    "dev2": "nodemon --watch src --exec \"vite build\""
   },
   "dependencies": {
+    "equal-vue": "^0.93.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
   }
 }
