--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "gray-matter": "^4.0.3",
+    "helmet": "^7.0.0",
     "http-errors": "~1.6.3",
     "http-proxy-middleware": "^2.0.6",
     "jade": "~1.11.0",
     "markdown-it": "^13.0.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sharp": "^0.32.5"
   }
 }
